[project]
name = "longest-word"
version = "0.1.0"
description = ""
authors = [
    {name = "david georgette",email = "davidgeorgette974@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest (>=8.3.4,<9.0.0)",
    "pylint (>=3.3.4,<4.0.0)",
    "requests (>=2.32.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
